--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,6 +5,8 @@ dependencies:
   flutter:
     sdk: flutter
 
+  flutter_webview_plugin: "^0.1.6"
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.0
@@ -53,5 +55,5 @@ flutter:
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
-  # For details regarding fonts from package dependencies, 
+  # For details regarding fonts from package dependencies,
   # see https://flutter.io/custom-fonts/#from-packages
