--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/lake.jpg
 
   # To add assets to your application, add an assets section, like this:
   # assets:
