--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,6 +6,8 @@ dependencies:
     sdk: flutter
 
   flutter_webview_plugin: "^0.1.6"
+  transparent_image: "^0.1.0"
+  dio: "^0.0.14"
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
