--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+      - lib/images/pavlova.jpg
 
   # To add assets to your application, add an assets section, like this:
   # assets:
