--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,13 +5,15 @@ dependencies:
   flutter:
     sdk: flutter
 
-  flutter_webview_plugin: "^0.1.6"
+  flutter_webview_plugin: "^0.3.0+2"
   transparent_image: "^0.1.0"
-  dio: "^0.0.14"
+  dio: "^1.0.9"
+  http: "^0.12.0"
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.0
+  cupertino_icons: ^0.1.2
+  english_words: ^3.1.5
 
 dev_dependencies:
   flutter_test:
